@@ -111,6 +111,10 @@ This is discouraged.
 Passwords may be reset with the
 .Ic chpass Ar username
 command.
+.Pp
+Users may be deleted with the
+.Ic deluser Ar username
+command.
 .Ss Maintenance
 The database may grow large over time.
 The
